c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/null_for_header.c
int main(void) {
    int a = 0;
    for (; ; ) {
        a = a + 1;
        if (a > 3)
            break;
    }

    return a;
}
