c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/labeled_break_outside_loop.c
int main(void) {
    // make sure our usual analysis of break/continue labels also traverses labeled statements
    label: break;
    return 0;
}